--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ requests
 nltk
 beautifulsoup4
 openai
-google-generativeai==0.3.0
+google-generativeai
 googlesearch-python
 sentence-transformers
 torch
