--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
-streamlit
-PyPDF2
-requests
-nltk
-beautifulsoup4
-openai
-google-generativeai
-googlesearch-python
-sentence-transformers
-torch
+streamlit>=1.28.0
+PyPDF2>=3.0.1
+requests>=2.31.0
+nltk>=3.8.1
+beautifulsoup4>=4.12.3
+openai>=1.3.8
+google-generativeai>=0.3.2
+googlesearch-python>=1.2.3
+sentence-transformers>=2.2.2
+torch>=2.0.0
