--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ requests>=2.31.0
 nltk>=3.8.1
 beautifulsoup4>=4.12.3
 openai>=1.3.8
-google-generativeai>=0.3.2
+google-genai
 googlesearch-python>=1.2.3
 sentence-transformers>=2.2.2
 torch>=2.0.0
